--- a/Controllers/CardPayViewController.xib
+++ b/Controllers/CardPayViewController.xib
@@ -9,6 +9,7 @@
                 <outlet property="CVVNumberTextField" destination="4SD-eF-cDb" id="cTj-jv-7wp"/>
                 <outlet property="cardHolderNameTextField" destination="CdL-c9-POW" id="AOP-BC-JSK"/>
                 <outlet property="cardNumberTextField" destination="Wm4-bz-BwG" id="reO-gg-69s"/>
+                <outlet property="cardSchemeImage" destination="Wq3-Ag-mA0" id="FaO-E8-4TF"/>
                 <outlet property="expiryDateTextField" destination="szd-5h-zhf" id="zSU-kj-PUf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -28,7 +29,7 @@
                     </connections>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Card Number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Wm4-bz-BwG">
-                    <rect key="frame" x="20" y="20" width="280" height="30"/>
+                    <rect key="frame" x="20" y="20" width="189" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
@@ -65,6 +66,10 @@
                         <outlet property="delegate" destination="-1" id="tTo-pe-qRl"/>
                     </connections>
                 </textField>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wq3-Ag-mA0">
+                    <rect key="frame" x="224" y="20" width="72" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
