--- a/Controllers/HomeViewController.xib
+++ b/Controllers/HomeViewController.xib
@@ -29,7 +29,7 @@
                     <rect key="frame" x="20" y="177" width="280" height="47"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                    <state key="normal" title="Sign up" backgroundImage="buttonbackground.png">
+                    <state key="normal" title="Sign Up" backgroundImage="buttonbackground.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -40,7 +40,7 @@
                     <rect key="frame" x="20" y="255" width="280" height="47"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                    <state key="normal" title="Sign in" backgroundImage="buttonbackground.png">
+                    <state key="normal" title="Sign In" backgroundImage="buttonbackground.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
