--- a/Controllers/PayViewController.xib
+++ b/Controllers/PayViewController.xib
@@ -22,7 +22,7 @@
                     <rect key="frame" x="0.0" y="62" width="80" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
-                    <state key="normal" title="Saved options">
+                    <state key="normal" title="Saved Options">
                         <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
