--- a/Controllers/NetBankingViewController.xib
+++ b/Controllers/NetBankingViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NetBankingViewController">
             <connections>
+                <outlet property="activityIndicatorView" destination="8bN-5h-guW" id="ylv-rr-u1P"/>
                 <outlet property="selectBankButton" destination="sQ5-AE-5Ro" id="dpt-zm-Lhx"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -37,6 +38,10 @@
                         <action selector="selectBankAction:" destination="-1" eventType="touchUpInside" id="WIy-7R-2H5"/>
                     </connections>
                 </button>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="8bN-5h-guW">
+                    <rect key="frame" x="106" y="62" width="20" height="20"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
